Japanese translation of the cleanup-info(8), dpkg-name(1), dpkg-scanpackages(1) and dpkg-statoverride(8) manpages.

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,19 @@
+2006-08-07  KISE Hiroshi  <kise@fuyuneko.jp>
+
+	* po4a/add_ja/dpkg-name.1.ja.add: Recode the addendum in UTF-8.
+	* po4a/add_ja/dpkg-statoverride.8.ja.add: Likewise.
+	* po4a/add_ja/dpkg-scanpackages.1.ja.add: Likewise.
+	* po4a/add_ja/cleanup-info.8.ja.add: Likewise.
+	* po4a/dpkg-name.1/dpkg-name.1.cfg: Specify the po4a options for
+	the Japanese translation.
+	* po4a/dpkg-statoverride.8/dpkg-statoverride.8.cfg: Likewise.
+	* po4a/dpkg-scanpackages.1/dpkg-scanpackages.1.cfg: Likewise.
+	* po4a/cleanup-info.8/cleanup-info.8.cfg: Likewise.
+	* po4a/dpkg-name.1/po/ja.po: Updated translation.
+	* po4a/dpkg-statoverride.8/po/ja.po: Likewise.
+	* po4a/dpkg-scanpackages.1/po/ja.po: Likewise.
+	* po4a/cleanup-info.8/po/ja.po: Likewise.
+
 2006-08-05  Nicolas Francois  <nicolas.francois@centraliens.net>
 
 	* C/dpkg-architecture.1: Remove linux-alpha from the architecture
