--- a/man/po4a/deb.5/po/ja.po
+++ b/man/po4a/deb.5/po/ja.po
@@ -176,7 +176,7 @@ msgid ""
 msgstr ""
 "安全に無視することができない新しいメンバーがある場合、このメンバーにアンダー"
 "スコア以外の文字で始まる名前をつけて B<data.tar.gz> より前に挿入するか、また"
-"は(こちらの可能性が高いが)メージャーバージョン番号を上げることになるであろ"
+"は(こちらの可能性が高いが)メジャーバージョン番号を上げることになるであろ"
 "う。"
 
 # type: SH
