--- a/man/po4a/dpkg-name.1/po/ja.po
+++ b/man/po4a/dpkg-name.1/po/ja.po
@@ -1,21 +1,22 @@
+# translation of dpkg-name.1.ja.po to Japanese
 # SOME DESCRIPTIVE TITLE
-# Copyright (C) YEAR Free Software Foundation, Inc.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
+# Copyright (C) 2006 Free Software Foundation, Inc.
+# KISE Hiroshi <kise@fuyuneko.jp>, 2006.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-07-28 21:10+0200\n"
-"PO-Revision-Date: 2005-07-03 15:04+0200\n"
-"Last-Translator: Unknown translator\n"
+"PO-Revision-Date: 2006-08-06 23:33+0900\n"
+"Last-Translator: KISE Hiroshi <kise@fuyuneko.jp>\n"
 "Language-Team: Japanese <debian-l10n-japanese@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=EUC-JP\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 # type: TH
 #: ../../../man/po4a/../C/dpkg-name.1:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "dpkg-name"
 msgstr "dpkg-name"
 
@@ -23,59 +24,56 @@ msgstr "dpkg-name"
 #: ../../../man/po4a/../C/dpkg-name.1:6
 #, no-wrap
 msgid "2006-02-28"
-msgstr ""
+msgstr "2006-02-28"
 
 # type: TH
 #: ../../../man/po4a/../C/dpkg-name.1:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Debian Project"
 msgstr "Debian Project"
 
 # type: TH
 #: ../../../man/po4a/../C/dpkg-name.1:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "dpkg utilities"
 msgstr "dpkg utilities"
 
 # type: SH
 #: ../../../man/po4a/../C/dpkg-name.1:7
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "NAME"
-msgstr "Ì¾Á°"
+msgstr "åå‰"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-name.1:9
-#, fuzzy
 msgid "dpkg-name - rename Debian packages to full package names"
-msgstr "dpkg-name - Debian ¥Ñ¥Ã¥±¡¼¥¸¤ò´°Á´¤Ê¥Ñ¥Ã¥±¡¼¥¸¤ÎÌ¾Á°¤ËÊÑ¹¹"
+msgstr "dpkg-name - Debian ãƒ‘ãƒƒã‚±ãƒ¼ã‚¸ã‚’å®Œå…¨ãªãƒ‘ãƒƒã‚±ãƒ¼ã‚¸ã®åå‰ã«å¤‰æ›´"
 
 # type: SH
 #: ../../../man/po4a/../C/dpkg-name.1:9
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "SYNOPSIS"
-msgstr "½ñ¼°"
+msgstr "æ›¸å¼"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-name.1:22
-#, fuzzy
 msgid ""
 "B<dpkg-name> [B<-a>|B<--no-architecture>] [B<-o>|B<--overwrite>] [B<-s>|B<--"
 "subdir> [I<dir>]] [B<-c>|B<--create-dir>] [B<-h>|B<--help>] [B<-v>|B<--"
 "version>] [B<-l>|B<--license>] [B<-k>|B<--symlink>] [B<-->] [I<files>]"
 msgstr ""
-"B<dpkg-name> [-a|--no-architecture] [-o|--overwrite] [-s|--subdir [dir]] [-"
-"c|--create-dir] [-h|--help] [-v|--version] [-l|--license] [-k|--symlink] [-"
-"[--] [files]"
+"B<dpkg-name> [B<-a>|B<--no-architecture>] [B<-o>|B<--overwrite>] [B<-s>|B<--"
+"subdir> [I<dir>]] [B<-c>|B<--create-dir>] [B<-h>|B<--help>] [B<-v>|B<--"
+"version>] [B<-l>|B<--license>] [B<-k>|B<--symlink>] [B<-->] [I<files>]"
 
 # type: SH
 #: ../../../man/po4a/../C/dpkg-name.1:22
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "DESCRIPTION"
-msgstr "ÀâÌÀ"
+msgstr "èª¬æ˜"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-name.1:33
-#, fuzzy
 msgid ""
 "This manual page documents the B<dpkg-name> sh script which provides an easy "
 "way to rename B<Debian> packages into their full package names. A full "
@@ -85,67 +83,63 @@ msgid ""
 "filename consists of the upstream version information optionally followed by "
 "a hyphen and the revision information."
 msgstr ""
-"¤³¤Î¥Ş¥Ë¥å¥¢¥ë¥Ú¡¼¥¸¤Ç¤Ï¡¢ B<dpkg-name> ¥·¥§¥ë¥¹¥¯¥ê¥×¥È¤Ë¤Ä¤¤¤ÆÀâÌÀ¤¹¤ë¡£ "
-"B<dpkg-name> ¥·¥§¥ë¥¹¥¯¥ê¥×¥È¤Ï¡¢ B<Debian> ¥Ñ¥Ã¥±¡¼¥¸¤ò´°Á´¤Ê¥Ñ¥Ã¥±¡¼¥¸Ì¾"
-"¤Ë¡¢´ÊÃ±¤ËÊÑ¹¹¤¹¤ë¤³¤È¤¬¤Ç¤­¤ë¡£ ´°Á´¤Ê¥Ñ¥Ã¥±¡¼¥¸Ì¾¤È¤Ï¡¢¥Ñ¥Ã¥±¡¼¥¸¤Î "
-"control ¥Õ¥¡¥¤¥ë¤Ç»ØÄê¤µ¤ì¤¿¾ğÊó¤«¤é ÆÀ¤é¤ì¤ë E<lt>¥Ñ¥Ã¥±¡¼¥¸E<gt>_E<lt>¥Ğ¡¼"
-"¥¸¥ç¥óE<gt>_E<lt>¥¢¡¼¥­¥Æ¥¯¥Á¥ãE<gt>.deb ¤È¤¤¤¦Ì¾Á°¤Ç¤¢¤ë¡£ E<lt>¥Ğ¡¼¥¸¥ç¥ó"
-"E<gt> ¤ÎÉôÊ¬¤Ï¡¢¸µ¡¹¤Î¥Ğ¡¼¥¸¥ç¥ó¾ğÊó¤Ë¥Ï¥¤¥Õ¥ó¡¢¤½¤·¤Æ¥ê¥Ó¥¸¥ç¥ó ¾ğÊó¤¬Â³¤¤¤¿"
-"¤â¤Î¤Ç¤¢¤ë¡£"
+"ã“ã®ãƒãƒ‹ãƒ¥ã‚¢ãƒ«ãƒšãƒ¼ã‚¸ã§ã¯ã€B<dpkg-name> ã‚·ã‚§ãƒ«ã‚¹ã‚¯ãƒªãƒ—ãƒˆã«ã¤ã„ã¦èª¬æ˜ã™ã‚‹ã€‚"
+"B<dpkg-name> ã‚·ã‚§ãƒ«ã‚¹ã‚¯ãƒªãƒ—ãƒˆã¯ã€B<Debian> ãƒ‘ãƒƒã‚±ãƒ¼ã‚¸ã‚’å®Œå…¨ãªãƒ‘ãƒƒã‚±ãƒ¼ã‚¸åã«ã€"
+"ç°¡å˜ã«å¤‰æ›´ã™ã‚‹ã“ã¨ãŒã§ãã‚‹ã€‚å®Œå…¨ãªãƒ‘ãƒƒã‚±ãƒ¼ã‚¸åã¨ã¯ã€ãƒ‘ãƒƒã‚±ãƒ¼ã‚¸ã® control ãƒ•ã‚¡"
+"ã‚¤ãƒ«ã§æŒ‡å®šã•ã‚ŒãŸæƒ…å ±ã‹ã‚‰å¾—ã‚‰ã‚Œã‚‹ E<lt>ãƒ‘ãƒƒã‚±ãƒ¼ã‚¸E<gt>_E<lt>ãƒãƒ¼ã‚¸ãƒ§ãƒ³"
+"E<gt>_E<lt>ã‚¢ãƒ¼ã‚­ãƒ†ã‚¯ãƒãƒ£E<gt>.deb ã¨ã„ã†åå‰ã§ã‚ã‚‹ã€‚E<lt>ãƒãƒ¼ã‚¸ãƒ§ãƒ³E<gt> ã®"
+"éƒ¨åˆ†ã¯ã€ä¸Šæµã®ãƒãƒ¼ã‚¸ãƒ§ãƒ³æƒ…å ±ã«ãƒã‚¤ãƒ•ãƒ³ã€ãã—ã¦ãƒªãƒ“ã‚¸ãƒ§ãƒ³æƒ…å ±ãŒç¶šã„ãŸã‚‚ã®ã§ã‚"
+"ã‚‹ã€‚"
 
 # type: SS
 #: ../../../man/po4a/../C/dpkg-name.1:33
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "OPTIONS"
-msgstr "¥ª¥×¥·¥ç¥ó"
+msgstr "ã‚ªãƒ—ã‚·ãƒ§ãƒ³"
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-name.1:34
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<-a, --no-architecture>"
 msgstr "B<-a, --no-architecture>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-name.1:37
-#, fuzzy
 msgid "The destination filename will not have the architecture information."
-msgstr "ÊÑ¹¹¸å¤Î¥Õ¥¡¥¤¥ëÌ¾¤Ë¥¢¡¼¥­¥Æ¥¯¥Á¥ã¾ğÊó¤ò´Ş¤Ş¤»¤Ê¤¤¡£"
+msgstr "å¤‰æ›´å¾Œã®ãƒ•ã‚¡ã‚¤ãƒ«åã«ã‚¢ãƒ¼ã‚­ãƒ†ã‚¯ãƒãƒ£æƒ…å ±ã‚’å«ã¾ã›ãªã„ã€‚"
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-name.1:37
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<-k, --symlink>"
 msgstr "B<-k, --symlink>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-name.1:40
-#, fuzzy
 msgid "Create a symlink, instead of moving."
-msgstr "°ÜÆ°¤¹¤ë¤«¤ï¤ê¤Ë¥·¥ó¥Ü¥ê¥Ã¥¯¥ê¥ó¥¯¤òºî¤ë¡£"
+msgstr "ç§»å‹•ã™ã‚‹ã‹ã‚ã‚Šã«ã‚·ãƒ³ãƒœãƒªãƒƒã‚¯ãƒªãƒ³ã‚¯ã‚’ä½œã‚‹ã€‚"
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-name.1:40
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<-o, --overwrite>"
 msgstr "B<-o, --overwrite>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-name.1:44
-#, fuzzy
 msgid ""
 "Existing files will be overwritten if they have the same name as the "
 "destination filename."
-msgstr "ÊÑ¹¹¸å¤Î¥Õ¥¡¥¤¥ëÌ¾¤ÈÆ±Ì¾¤Î¥Õ¥¡¥¤¥ë¤¬¤¢¤ì¤Ğ¡¢¤½¤ì¤ò¾å½ñ¤­¤·¤Æ¤·¤Ş¤¦¡£"
+msgstr "å¤‰æ›´å¾Œã®ãƒ•ã‚¡ã‚¤ãƒ«åã¨åŒåã®ãƒ•ã‚¡ã‚¤ãƒ«ãŒã‚ã‚Œã°ã€ãã‚Œã‚’ä¸Šæ›¸ãã—ã¦ã—ã¾ã†ã€‚"
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-name.1:44
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<-s, --subdir> [I<dir>]"
-msgstr "B<-s, --subdir [dir]>"
+msgstr "B<-s, --subdir> [I<dir>]"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-name.1:56
-#, fuzzy
 msgid ""
 "Files will be moved into a subdirectory. If the directory given as argument "
 "exists the files will be moved into that directory otherwise the name of the "
@@ -158,147 +152,139 @@ msgid ""
 "packages will find their way to the `no-section' area. Use this option with "
 "care, it's messy."
 msgstr ""
-"¥Õ¥¡¥¤¥ë¤ò subdir ¤Ç»ØÄê¤·¤¿¥Ç¥£¥ì¥¯¥È¥ê¤Ë°ÜÆ°¤¹¤ë¡£¤â¤·°ú¿ô¤Ç»ØÄê¤·¤¿ ¥Ç¥£¥ì"
-"¥¯¥È¥ê¤¬Â¸ºß¤¹¤ì¤Ğ¡¢¥Ñ¥Ã¥±¡¼¥¸¤Î control ¤Î¥»¥¯¥·¥ç¥ó¥Õ¥£¡¼¥ë¥É ¤«¤éÆÀ¤é¤ì¤¿"
-"¥¿¡¼¥²¥Ã¥È¥Ç¥£¥ì¥¯¥È¥ê¤ÎÌ¾Á°¤Î¤«¤ï¤ê¤Ë¤½¤Î¥Ç¥£¥ì¥¯¥È¥ê¤Ë ¥Õ¥¡¥¤¥ë¤ò°ÜÆ°¤¹¤ë¡£"
-"ÄÌ¾ï¡¢¥¿¡¼¥²¥Ã¥È¥Ç¥£¥ì¥¯¥È¥ê¤Ï `unstable/binary-E<lt>¥¢¡¼¥­¥Æ¥¯¥Á¥ãE<gt>/"
-"E<lt>¥»¥¯¥·¥ç¥óE<gt>' ¤Ç¤¢¤ë¡£ ¤â¤· control ¤Ç¤Î¥»¥¯¥·¥ç¥ó¤¬ `non-free'¡¢"
-"`contrib' ¤â¤·¤¯¤Ï¥»¥¯¥·¥ç¥ó¾ğÊó¤¬ ¤Ê¤¤¾ì¹ç¤Ï¡¢¥¿¡¼¥²¥Ã¥È¥Ç¥£¥ì¥¯¥È¥ê¤Ï "
-"`E<lt>¥»¥¯¥·¥ç¥óE<gt>/binary-E<lt>¥¢¡¼¥­¥Æ¥¯¥Á¥ãE<gt>' ¤Ë¤Ê¤ë¡£¥»¥¯¥·¥ç¥ó"
-"¥Õ¥£¡¼¥ë¥É¤ÏÉ¬¿Ü¤Ç¤Ï¤Ê¤¤¤Î¤ÇÂ¿¤¯¤Î¥Ñ¥Ã¥±¡¼¥¸¤¬ ¥»¥¯¥·¥ç¥ó¤Ê¤·¤Î¾ì½ê¤Ë¤¤¤Ã¤Æ¤·"
-"¤Ş¤¦¤À¤í¤¦¡£¤³¤Î¥ª¥×¥·¥ç¥ó¤ò»È¤¦»ş¤Ï Ãí°Õ¤¹¤ë¤³¤È¡£Ìñ²ğ¤Ç¤¢¤ë¡£"
+"ãƒ•ã‚¡ã‚¤ãƒ«ã‚’ã‚µãƒ–ãƒ‡ã‚£ãƒ¬ã‚¯ãƒˆãƒªã«ç§»å‹•ã™ã‚‹ã€‚ã‚‚ã—å¼•æ•°ã§æŒ‡å®šã—ãŸãƒ‡ã‚£ãƒ¬ã‚¯ãƒˆãƒªãŒå­˜åœ¨ã™"
+"ã‚Œã°ã€ãƒ‘ãƒƒã‚±ãƒ¼ã‚¸ã® control ã®ã‚»ã‚¯ã‚·ãƒ§ãƒ³ãƒ•ã‚£ãƒ¼ãƒ«ãƒ‰ã‹ã‚‰å¾—ã‚‰ã‚ŒãŸã‚¿ãƒ¼ã‚²ãƒƒãƒˆãƒ‡ã‚£ãƒ¬"
+"ã‚¯ãƒˆãƒªã®åå‰ã®ã‹ã‚ã‚Šã«ãã®ãƒ‡ã‚£ãƒ¬ã‚¯ãƒˆãƒªã«ãƒ•ã‚¡ã‚¤ãƒ«ã‚’ç§»å‹•ã™ã‚‹ã€‚é€šå¸¸ã€ã‚¿ãƒ¼ã‚²ãƒƒãƒˆ"
+"ãƒ‡ã‚£ãƒ¬ã‚¯ãƒˆãƒªã¯ `unstable/binary-E<lt>ã‚¢ãƒ¼ã‚­ãƒ†ã‚¯ãƒãƒ£E<gt>/E<lt>ã‚»ã‚¯ã‚·ãƒ§ãƒ³"
+"E<gt>' ã§ã‚ã‚‹ã€‚ã‚‚ã— control ã§ã®ã‚»ã‚¯ã‚·ãƒ§ãƒ³æƒ…å ±ãŒãªã„å ´åˆã¯ `no-section' ã¨ã¿"
+"ãªã•ã‚Œã‚‹ã€‚ãã—ã¦ã“ã®ã¨ãã€ã¾ãŸã¯ã‚»ã‚¯ã‚·ãƒ§ãƒ³ãŒ `non-free' ã‚„ `contrib' ã®å ´åˆ"
+"ã¯ã€ã‚¿ãƒ¼ã‚²ãƒƒãƒˆãƒ‡ã‚£ãƒ¬ã‚¯ãƒˆãƒªã¯ `E<lt>ã‚»ã‚¯ã‚·ãƒ§ãƒ³E<gt>/binary-E<lt>ã‚¢ãƒ¼ã‚­ãƒ†ã‚¯ãƒãƒ£"
+"E<gt>' ã«ãªã‚‹ã€‚ã‚»ã‚¯ã‚·ãƒ§ãƒ³ãƒ•ã‚£ãƒ¼ãƒ«ãƒ‰ã¯å¿…é ˆã§ã¯ãªã„ã®ã§å¤šãã®ãƒ‘ãƒƒã‚±ãƒ¼ã‚¸ãŒ `no-"
+"section' ã®å ´æ‰€ã«ã„ã£ã¦ã—ã¾ã†ã ã‚ã†ã€‚ã“ã®ã‚ªãƒ—ã‚·ãƒ§ãƒ³ã‚’ä½¿ã†æ™‚ã¯æ³¨æ„ã™ã‚‹ã“ã¨ã€‚å„"
+"ä»‹ã§ã‚ã‚‹ã€‚"
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-name.1:56
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<-c, --create-dir>"
 msgstr "B<-c, --create-dir>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-name.1:61
-#, fuzzy
 msgid ""
 "This option can used together with the -s option. If a target directory "
 "isn't found it will be created automatically.  B<Use this option with care.>"
 msgstr ""
-"¤³¤Î¥ª¥×¥·¥ç¥ó¤Ï -s ¥ª¥×¥·¥ç¥ó¤È¤È¤â¤Ë»È¤¦¤³¤È¤¬¤Ç¤­¤ë¡£¥¿¡¼¥²¥Ã¥È ¥Ç¥£¥ì¥¯¥È"
-"¥ê¤¬¤Ê¤±¤ì¤Ğ¡¢¼«Æ°Åª¤ËºîÀ®¤µ¤ì¤ë¡£ B<¤³¤Î¥ª¥×¥·¥ç¥ó¤ò»È¤¦»ş¤ÏÃí°Õ¤¹¤ë¤³¤È¡£>"
+"ã“ã®ã‚ªãƒ—ã‚·ãƒ§ãƒ³ã¯ -s ã‚ªãƒ—ã‚·ãƒ§ãƒ³ã¨ã¨ã‚‚ã«ä½¿ã†ã“ã¨ãŒã§ãã‚‹ã€‚ã‚¿ãƒ¼ã‚²ãƒƒãƒˆãƒ‡ã‚£ãƒ¬ã‚¯ãƒˆ"
+"ãƒªãŒãªã‘ã‚Œã°ã€è‡ªå‹•çš„ã«ä½œæˆã•ã‚Œã‚‹ã€‚B<ã“ã®ã‚ªãƒ—ã‚·ãƒ§ãƒ³ã‚’ä½¿ã†æ™‚ã¯æ³¨æ„ã™ã‚‹ã“ã¨ã€‚>"
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-name.1:61
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<-h, --help>"
 msgstr "B<-h, --help>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-name.1:64
-#, fuzzy
 msgid "Print a usage message and exit successfully."
-msgstr "ÍøÍÑÊıË¡¤òÉ½¼¨¤·¤ÆÀµ¾ï½ªÎ»¤¹¤ë¡£"
+msgstr "åˆ©ç”¨æ–¹æ³•ã‚’è¡¨ç¤ºã—ã¦æ­£å¸¸çµ‚äº†ã™ã‚‹ã€‚"
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-name.1:64
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<-v, --version>"
 msgstr "B<-v, --version>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-name.1:67
-#, fuzzy
 msgid "Print version information and exit successfully."
-msgstr "¥Ğ¡¼¥¸¥ç¥ó¾ğÊó¤òÉ½¼¨¤·¤ÆÀµ¾ï½ªÎ»¤¹¤ë¡£"
+msgstr "ãƒãƒ¼ã‚¸ãƒ§ãƒ³æƒ…å ±ã‚’è¡¨ç¤ºã—ã¦æ­£å¸¸çµ‚äº†ã™ã‚‹ã€‚"
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-name.1:67
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<-l, --license>"
 msgstr "B<-l, --license>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-name.1:71
-#, fuzzy
 msgid ""
 "Print copyright information and (a reference to GNU) license information and "
 "exit successfully."
-msgstr "Ãøºî¸¢¾ğÊó¡¢¥é¥¤¥»¥ó¥¹¾ğÊó(GNU ¤Ø¤Î»²¾È)¤òÉ½¼¨¤·¤ÆÀµ¾ï½ªÎ»¤¹¤ë¡£"
+msgstr "è‘—ä½œæ¨©æƒ…å ±ã€ãƒ©ã‚¤ã‚»ãƒ³ã‚¹æƒ…å ±(GNU ã¸ã®å‚ç…§)ã‚’è¡¨ç¤ºã—ã¦æ­£å¸¸çµ‚äº†ã™ã‚‹ã€‚"
 
 # type: SH
 #: ../../../man/po4a/../C/dpkg-name.1:71
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "EXAMPLES"
-msgstr "Îã"
+msgstr "ä¾‹"
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-name.1:72
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<dpkg-name bar-foo.deb>"
 msgstr "B<dpkg-name bar-foo.deb>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-name.1:77
-#, fuzzy
 msgid ""
 "The file `bar-foo.deb' will be renamed to bar-foo_1.0-2_i386.deb or "
 "something similar (depending on whatever information is in the control part "
 "of `bar-foo.deb')."
 msgstr ""
-"¥Õ¥¡¥¤¥ë `bar-foo.deb' ¤¬ bar-foo_1.0-2_i386.deb ¤Î¤è¤¦¤Ê´¶¤¸¤ËÊÑ¹¹¤µ¤ì¤ë¡£ "
-"(¼Âºİ¤Ë¤É¤¦¤Ê¤ë¤«¤Ï `bar-foo.deb' ¤ÎÃæ¤Î control ¤Î¾ğÊó¤Ë°ÍÂ¸¤¹¤ë)"
+"ãƒ•ã‚¡ã‚¤ãƒ« `bar-foo.deb' ãŒ bar-foo_1.0-2_i386.deb ã®ã‚ˆã†ãªæ„Ÿã˜ã«å¤‰æ›´ã•ã‚Œã‚‹ã€‚"
+"(å®Ÿéš›ã«ã©ã†ãªã‚‹ã‹ã¯ `bar-foo.deb' ã®ä¸­ã® control ã®æƒ…å ±ã«ä¾å­˜ã™ã‚‹)"
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-name.1:77
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<find /root/debian/ -name \\(aq*.deb\\(aq | xargs -n 1 dpkg-name -a>"
-msgstr "B<find /root/debian/ -name '*.deb' | xargs -n 1 dpkg-name -a>"
+msgstr "B<find /root/debian/ -name \\(aq*.deb\\(aq | xargs -n 1 dpkg-name -a>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-name.1:82
-#, fuzzy
 msgid ""
 "All files with the extension `deb' in the directory /root/debian and its "
 "subdirectory's will be renamed by dpkg-name if required into names with no "
 "architecture information."
 msgstr ""
-"¥Ç¥£¥ì¥¯¥È¥ê /root/debian °Ê²¼¤Ë¤¢¤ê³ÈÄ¥»Ò¤¬ `deb' ¤ÎÁ´¤Æ¤Î¥Õ¥¡¥¤¥ë¤ò dpkg-"
-"name ¤ò»È¤Ã¤Æ¥¢¡¼¥­¥Æ¥¯¥Á¥ã¾ğÊó¤Ê¤·¤ÎÌ¾Á°¤ËÊÑ¹¹¤¹¤ë¡£"
+"ãƒ‡ã‚£ãƒ¬ã‚¯ãƒˆãƒª /root/debian ä»¥ä¸‹ã«ã‚ã‚Šæ‹¡å¼µå­ãŒ `deb' ã®å…¨ã¦ã®ãƒ•ã‚¡ã‚¤ãƒ«ã‚’ dpkg-"
+"name ã‚’ä½¿ã£ã¦ã‚¢ãƒ¼ã‚­ãƒ†ã‚¯ãƒãƒ£æƒ…å ±ãªã—ã®åå‰ã«å¤‰æ›´ã™ã‚‹ã€‚"
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-name.1:82
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<find -name \\(aq*.deb\\(aq | xargs -n 1 dpkg-name -a -o -s -c>"
-msgstr "B<find -name '*.deb' | xargs -n 1 dpkg-name -a -o -s -c>"
+msgstr "B<find -name \\(aq*.deb\\(aq | xargs -n 1 dpkg-name -a -o -s -c>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-name.1:88
-#, fuzzy
 msgid ""
 "B<Don't do this.> Your archive will be messed up completely because a lot of "
 "packages don't come with section information.  B<Don't do this.>"
 msgstr ""
-"B<¤ä¤Ã¤Æ¤Ï¤¤¤±¤Ê¤¤!> Â¿¤¯¤Î¥Ñ¥Ã¥±¡¼¥¸¤Ï¥»¥¯¥·¥ç¥ó¾ğÊó¤ò¤â¤Ã¤Æ¤¤¤Ê¤¤¤Î¤Ç¡¢¤¢¤Ê"
-"¤¿¤Î¥¢¡¼¥«¥¤¥Ö¤Ï ¤°¤Á¤ã¤°¤Á¤ã¤Ë¤Ê¤Ã¤Æ¤·¤Ş¤¦¤À¤í¤¦¡£ B<¤ä¤Ã¤Æ¤Ï¤¤¤±¤Ê¤¤!>"
+"B<ã‚„ã£ã¦ã¯ã„ã‘ãªã„!> å¤šãã®ãƒ‘ãƒƒã‚±ãƒ¼ã‚¸ã¯ã‚»ã‚¯ã‚·ãƒ§ãƒ³æƒ…å ±ã‚’ã‚‚ã£ã¦ã„ãªã„ã®ã§ã€ã‚ãª"
+"ãŸã®ã‚¢ãƒ¼ã‚«ã‚¤ãƒ–ã¯ãã¡ã‚ƒãã¡ã‚ƒã«ãªã£ã¦ã—ã¾ã†ã ã‚ã†ã€‚B<ã‚„ã£ã¦ã¯ã„ã‘ãªã„!>"
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-name.1:88
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<dpkg --build debian-tmp && dpkg-name -o -s .. debian-tmp.deb>"
 msgstr "B<dpkg --build debian-tmp && dpkg-name -o -s .. debian-tmp.deb>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-name.1:91
-#, fuzzy
 msgid "This can be used when building new packages."
-msgstr "¤³¤ì¤Ï¿·¤·¤¤¥Ñ¥Ã¥±¡¼¥¸¤òºî¤ë»ş¤Ë»È¤¦¤³¤È¤¬¤Ç¤­¤ë¡£"
+msgstr "ã“ã‚Œã¯æ–°ã—ã„ãƒ‘ãƒƒã‚±ãƒ¼ã‚¸ã‚’ä½œã‚‹æ™‚ã«ä½¿ã†ã“ã¨ãŒã§ãã‚‹ã€‚"
 
 # type: SH
 #: ../../../man/po4a/../C/dpkg-name.1:91
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "BUGS"
-msgstr "¥Ğ¥°"
+msgstr "ãƒã‚°"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-name.1:100
-#, fuzzy
 msgid ""
 "Some packages don't follow the name structure "
 "E<lt>packageE<gt>_E<lt>versionE<gt>_E<lt>architectureE<gt>.deb. Packages "
@@ -306,37 +292,35 @@ msgid ""
 "impact on how packages are installed by B<dselect>(1)/ B<dpkg>(1), but other "
 "installation tools might depend on this naming structure."
 msgstr ""
-"¥Ñ¥Ã¥±¡¼¥¸¤Ë¤è¤Ã¤Æ¤Ï E<lt>¥Ñ¥Ã¥±¡¼¥¸E<gt>_E<lt>¥Ğ¡¼¥¸¥ç¥óE<gt>_E<lt>¥¢¡¼¥­¥Æ"
-"¥¯¥Á¥ãE<gt>.deb ¤È¤¤¤¦Ì¾Á°¤Ç¤Ï¤Ê¤¤¡£ dpkg-name ¤Ë¤è¤Ã¤Æ²şÌ¾¤µ¤ì¤¿¥Ñ¥Ã¥±¡¼¥¸¤Ï"
-"¤³¤Î¤è¤¦¤ÊÌ¾Á°¤Ë¤Ê¤ë¡£ °ìÈÌ¤Ë¤Ï¡¢¤³¤ì¤Ï dselect/dpkg ¤Ë¤è¤Ã¤Æ¥Ñ¥Ã¥±¡¼¥¸¤¬¤É¤Î"
-"¤è¤¦¤Ë¥¤¥ó¥¹¥È¡¼¥ë ¤µ¤ìÊı¤Ë¤Ï±Æ¶Á¤Ï¤Ê¤¤¤¬¡¢¤³¤ÎÌ¾Á°¹½Â¤¤Ë°ÍÂ¸¤·¤Æ¤¤¤ë¥¤¥ó¥¹"
-"¥È¡¼¥ë¥Ä¡¼¥ë¤Ë ¤è¤Ã¤Æ¤Ï±Æ¶Á¤¬¤¢¤ë¤«¤â¤·¤ì¤Ê¤¤¡£"
+"ãƒ‘ãƒƒã‚±ãƒ¼ã‚¸ã«ã‚ˆã£ã¦ã¯ E<lt>ãƒ‘ãƒƒã‚±ãƒ¼ã‚¸E<gt>_E<lt>ãƒãƒ¼ã‚¸ãƒ§ãƒ³E<gt>_E<lt>ã‚¢ãƒ¼ã‚­ãƒ†"
+"ã‚¯ãƒãƒ£E<gt>.deb ã¨ã„ã†åå‰ã§ã¯ãªã„ã€‚ dpkg-name ã«ã‚ˆã£ã¦æ”¹åã•ã‚ŒãŸãƒ‘ãƒƒã‚±ãƒ¼ã‚¸ã¯"
+"ã“ã®ã‚ˆã†ãªåå‰ã«ãªã‚‹ã€‚ä¸€èˆ¬ã«ã¯ã€ã“ã‚Œã¯ B<dselect>(1)/ B<dpkg>(1) ã«ã‚ˆã£ã¦ãƒ‘ãƒƒ"
+"ã‚±ãƒ¼ã‚¸ãŒã©ã®ã‚ˆã†ã«ã‚¤ãƒ³ã‚¹ãƒˆãƒ¼ãƒ«ã•ã‚Œæ–¹ã«ã¯å½±éŸ¿ã¯ãªã„ãŒã€ã“ã®åå‰æ§‹é€ ã«ä¾å­˜ã—ã¦"
+"ã„ã‚‹ã‚¤ãƒ³ã‚¹ãƒˆãƒ¼ãƒ«ãƒ„ãƒ¼ãƒ«ã«ã‚ˆã£ã¦ã¯å½±éŸ¿ãŒã‚ã‚‹ã‹ã‚‚ã—ã‚Œãªã„ã€‚"
 
 # type: SH
 #: ../../../man/po4a/../C/dpkg-name.1:100
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "SEE ALSO"
-msgstr "´ØÏ¢¹àÌÜ"
+msgstr "é–¢é€£é …ç›®"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-name.1:107
-#, fuzzy
 msgid ""
 "B<deb>(5), B<deb-control>(5), B<dpkg>(1), B<dpkg-deb>(1), B<find>(1), "
 "B<xargs>(1)."
 msgstr ""
-"B<deb>(5), B<deb-control>(5), B<dpkg>(8), B<dpkg-deb>(1), B<find>(1), "
+"B<deb>(5), B<deb-control>(5), B<dpkg>(1), B<dpkg-deb>(1), B<find>(1), "
 "B<xargs>(1)."
 
 # type: SH
 #: ../../../man/po4a/../C/dpkg-name.1:107
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "COPYRIGHT"
 msgstr "COPYRIGHT"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-name.1:113
-#, fuzzy
 msgid ""
 "Copyright 1995,1996 Erick Branderhorst.  B<dpkg-name> is free software; see "
 "the GNU General Public Licence version 2 or later for copying conditions. "
@@ -347,6 +331,5 @@ msgstr ""
 "There is B<no> warranty."
 
 # type: TH
-#, fuzzy
 #~ msgid "May 1996"
 #~ msgstr "May 1996"
