--- a/man/po4a/dpkg-statoverride.8/po/ja.po
+++ b/man/po4a/dpkg-statoverride.8/po/ja.po
@@ -1,91 +1,88 @@
+# translation of dpkg-statoverride.8.ja.po to Japanese
 # SOME DESCRIPTIVE TITLE
-# Copyright (C) YEAR Free Software Foundation, Inc.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
+# Copyright (C) 2006 Free Software Foundation, Inc.
+# KISE Hiroshi <kise@fuyuneko.jp>, 2006.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-07-29 18:04+0200\n"
-"PO-Revision-Date: 2005-07-03 15:04+0200\n"
-"Last-Translator: Unknown translator\n"
+"PO-Revision-Date: 2006-08-06 15:13+0900\n"
+"Last-Translator: KISE Hiroshi <kise@fuyuneko.jp>\n"
 "Language-Team: Japanese <debian-l10n-japanese@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=EUC-JP\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-statoverride.8:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "dpkg-statoverride"
-msgstr "I</var/lib/dpkg/statoverride>"
+msgstr "dpkg-statoverride"
 
 # type: TH
 #: ../../../man/po4a/../C/dpkg-statoverride.8:1
 #, no-wrap
 msgid "2006-05-23"
-msgstr ""
+msgstr "2006-05-23"
 
 # type: TH
 #: ../../../man/po4a/../C/dpkg-statoverride.8:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Debian project"
 msgstr "Debian project"
 
 # type: TH
 #: ../../../man/po4a/../C/dpkg-statoverride.8:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "dpkg utilities"
-msgstr "dpkg utililties"
+msgstr "dpkg utilities"
 
 # type: SH
 #: ../../../man/po4a/../C/dpkg-statoverride.8:2
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "NAME"
-msgstr "Ì¾Á°"
+msgstr "åå‰"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-statoverride.8:4
-#, fuzzy
 msgid "dpkg-statoverride - override ownership and mode of files"
-msgstr "dpkg-statoverride - ¥Õ¥¡¥¤¥ë¤Î½êÍ­¸¢¤ä¥â¡¼¥É¤òÊÑ¹¹¤¹¤ë"
+msgstr "dpkg-statoverride - ãƒ•ã‚¡ã‚¤ãƒ«ã®æ‰€æœ‰æ¨©ã‚„ãƒ¢ãƒ¼ãƒ‰ã‚’å¤‰æ›´ã™ã‚‹"
 
 # type: SH
 #: ../../../man/po4a/../C/dpkg-statoverride.8:5
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "SYNOPSIS"
-msgstr "½ñ¼°"
+msgstr "æ›¸å¼"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-statoverride.8:9
-#, fuzzy
 msgid ""
 "B<dpkg-statoverride> [I<options>] B<--add>I< E<lt>userE<gt> E<lt>groupE<gt> "
 "E<lt>modeE<gt> E<lt>fileE<gt>>"
 msgstr ""
-"B<dpkg-statoverride> [options] --add E<lt>userE<gt> E<lt>groupE<gt> "
-"E<lt>modeE<gt> I<E<lt>fileE<gt>>"
+"B<dpkg-statoverride> [I<options>] B<--add>I< E<lt>userE<gt> E<lt>groupE<gt> "
+"E<lt>modeE<gt> E<lt>fileE<gt>>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-statoverride.8:13
-#, fuzzy
 msgid "B<dpkg-statoverride> [I<options>] B<--remove>I< E<lt>fileE<gt>>"
-msgstr "B<dpkg-statoverride> [options] --remove I<E<lt>fileE<gt>>"
+msgstr "B<dpkg-statoverride> [I<options>] B<--remove>I< E<lt>fileE<gt>>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-statoverride.8:18
-#, fuzzy
 msgid "B<dpkg-statoverride> [I<options>] B<--list> [I<E<lt>glob-patternE<gt>>]"
-msgstr "B<dpkg-statoverride> [options] --list I<[E<lt>glob-patternE<gt>]>"
+msgstr ""
+"B<dpkg-statoverride> [I<options>] B<--list> [I<E<lt>glob-patternE<gt>>]"
 
 # type: SH
 #: ../../../man/po4a/../C/dpkg-statoverride.8:19
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "DESCRIPTION"
-msgstr "ÀâÌÀ"
+msgstr "èª¬æ˜"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-statoverride.8:28
-#, fuzzy
 msgid ""
 "`B<stat overrides>' are a way to tell B<dpkg>(1)  to use a different owner "
 "or mode for a file when a package is installed. (note: I use the word `file' "
@@ -94,38 +91,36 @@ msgid ""
 "that are normally setuid to be install without a setuid flag, or only "
 "executable by a certain group."
 msgstr ""
-"`B<stat override>' ¤È¤Ï¡¢¥Ñ¥Ã¥±¡¼¥¸¤¬¥¤¥ó¥¹¥È¡¼¥ë¤µ¤ì¤ë¤È¤­¤Ë¡¢ ¥Õ¥¡¥¤¥ë¤Î½ê"
-"Í­¼Ô¤ä¥â¡¼¥É¤òÊÑ¹¹¤¹¤ë¤è¤¦ dpkg ¤Ë»Ø¼¨¤¹¤ëÊıË¡¤Ç¤¢¤ë (Ãí°Õ: ¤³¤³¤Ç¤Ï¡Ö¥Õ¥¡¥¤"
-"¥ë¡×¤È¤¤¤¦¸ÀÍÕ¤ò»È¤Ã¤¿¤¬¡¢ ¼Âºİ¤Ë¤Ï dpkg ¤¬°·¤¨¤ë¥Õ¥¡¥¤¥ë¥·¥¹¥Æ¥à¥ª¥Ö¥¸¥§¥¯¥È"
-"¤Ê¤é¤Ê¤ó¤Ç¤â¤è¤¤¡£ ¤Ä¤Ş¤ê¥Ç¥£¥ì¥¯¥È¥ê¤ä¥Ç¥Ğ¥¤¥¹¤Ê¤É¤Ç¤â OK)¡£ ¤³¤ì¤òÍÑ¤¤¤ë"
-"¤È¡¢ÄÌ¾ï setuid ¤µ¤ì¤ë¥×¥í¥°¥é¥à¤ò setuid ¥Õ¥é¥°Ìµ¤·¤Ç ¥¤¥ó¥¹¥È¡¼¥ë¤·¤¿¤ê¡¢ÆÃ"
-"Äê¤Î¥°¥ë¡¼¥×¤Î¤ß¤Ë¼Â¹Ôµö²Ä¤òÍ¿¤¨¤ë¤è¤¦¤Ë¤·¤¿¤ê¤Ç¤­¤ë¡£"
+"`B<stat override>' ã¨ã¯ã€ãƒ‘ãƒƒã‚±ãƒ¼ã‚¸ãŒã‚¤ãƒ³ã‚¹ãƒˆãƒ¼ãƒ«ã•ã‚Œã‚‹ã¨ãã«ã€ãƒ•ã‚¡ã‚¤ãƒ«ã®æ‰€æœ‰"
+"è€…ã‚„ãƒ¢ãƒ¼ãƒ‰ã‚’å¤‰æ›´ã™ã‚‹ã‚ˆã† B<dpkg>(1) ã«æŒ‡ç¤ºã™ã‚‹æ–¹æ³•ã§ã‚ã‚‹(æ³¨æ„: ã“ã“ã§ã¯ã€Œãƒ•ã‚¡"
+"ã‚¤ãƒ«ã€ã¨ã„ã†è¨€è‘‰ã‚’ä½¿ã£ãŸãŒã€å®Ÿéš›ã«ã¯ dpkg ãŒæ‰±ãˆã‚‹ãƒ•ã‚¡ã‚¤ãƒ«ã‚·ã‚¹ãƒ†ãƒ ã‚ªãƒ–ã‚¸ã‚§ã‚¯"
+"ãƒˆãªã‚‰ãªã‚“ã§ã‚‚ã‚ˆã„ã€‚ã¤ã¾ã‚Šãƒ‡ã‚£ãƒ¬ã‚¯ãƒˆãƒªã‚„ãƒ‡ãƒã‚¤ã‚¹ãªã©ã§ã‚‚ OK)ã€‚ã“ã‚Œã‚’ç”¨ã„ã‚‹"
+"ã¨ã€é€šå¸¸ setuid ã•ã‚Œã‚‹ãƒ—ãƒ­ã‚°ãƒ©ãƒ ã‚’ setuid ãƒ•ãƒ©ã‚°ç„¡ã—ã§ã‚¤ãƒ³ã‚¹ãƒˆãƒ¼ãƒ«ã—ãŸã‚Šã€ç‰¹"
+"å®šã®ã‚°ãƒ«ãƒ¼ãƒ—ã®ã¿ã«å®Ÿè¡Œè¨±å¯ã‚’ä¸ãˆã‚‹ã‚ˆã†ã«ã—ãŸã‚Šã§ãã‚‹ã€‚"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-statoverride.8:32
-#, fuzzy
 msgid ""
 "B<dpkg-statoverride> is a utility to manage the list of stat overrides. It "
 "has three basic functions: adding, removing and listing overrides."
 msgstr ""
-"B<dpkg-statoverride> ¤Ï stat override ¤Î¥ê¥¹¥È¤ò´ÉÍı¤¹¤ë¥æ¡¼¥Æ¥£¥ê¥Æ¥£¤Ç¤¢"
-"¤ë¡£ override ¤òÄÉ²Ã¡¦ºï½ü¡¦É½¼¨¤¹¤ë¤È¤¤¤¦¡¢3 ¤Ä¤Î´ğËÜµ¡Ç½¤¬¤¢¤ë¡£"
+"B<dpkg-statoverride> ã¯ stat override ã®ãƒªã‚¹ãƒˆã‚’ç®¡ç†ã™ã‚‹ãƒ¦ãƒ¼ãƒ†ã‚£ãƒªãƒ†ã‚£ã§ã‚"
+"ã‚‹ã€‚ override ã‚’è¿½åŠ ãƒ»å‰Šé™¤ãƒ»è¡¨ç¤ºã™ã‚‹ã¨ã„ã†ã€3 ã¤ã®åŸºæœ¬æ©Ÿèƒ½ãŒã‚ã‚‹ã€‚"
 
 # type: SH
 #: ../../../man/po4a/../C/dpkg-statoverride.8:33
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "OPTIONS"
-msgstr "¥ª¥×¥·¥ç¥ó"
+msgstr "ã‚ªãƒ—ã‚·ãƒ§ãƒ³"
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-statoverride.8:34
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--add>I< E<lt>userE<gt> E<lt>groupE<gt> E<lt>modeE<gt> E<lt>fileE<gt>>"
-msgstr "I<--add E<lt>userE<gt> E<lt>groupE<gt> E<lt>modeE<gt> E<lt>fileE<gt>>"
+msgstr "B<--add>I< E<lt>userE<gt> E<lt>groupE<gt> E<lt>modeE<gt> E<lt>fileE<gt>>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-statoverride.8:41
-#, fuzzy
 msgid ""
 "Add an override for B<E<lt>fileE<gt>>. B<E<lt>fileE<gt>> does not need to "
 "exist when this command is used; the override will be stored and used "
@@ -133,10 +128,10 @@ msgid ""
 "or B<nobody>), or by their number by prepending the number with a "
 "`B<#>' (for example B<#0> or B<#65534>)."
 msgstr ""
-"B<E<lt>fileE<gt>> ¤Î override ¤òÄÉ²Ã¤¹¤ë¡£ B<E<lt>fileE<gt>> ¤Ï¥³¥Ş¥ó¥É¤Î¼Â¹Ô"
-"»ş¤Ë¤ÏÂ¸ºß¤·¤Æ¤¤¤Ê¤¯¤Æ¤â¤è¤¤¡£ override ¤ÏÊİÂ¸¤µ¤ì¡¢¸å¤ÇÍÑ¤¤¤é¤ì¤ë¡£ ¥æ¡¼¥¶¡¼"
-"¤È¥°¥ë¡¼¥×¤ÏÌ¾Á° (Îã¤¨¤Ğ B<root> ¤È¤« B<nobody> ¤È¤«) ¤Ç¤â»ØÄê¤Ç¤­¤ë¤·¡¢Á°¤Ë "
-"`B<#>' Ê¸»ú¤ò¤Ä¤±¤¿¿ô»ú (Îã¤¨¤Ğ B<#0> ¤È¤« B<#65534> ¤È¤«) ¤Ç¤â»ØÄê¤Ç¤­¤ë¡£"
+"B<E<lt>fileE<gt>> ã® override ã‚’è¿½åŠ ã™ã‚‹ã€‚ B<E<lt>fileE<gt>> ã¯ã‚³ãƒãƒ³ãƒ‰ã®å®Ÿè¡Œ"
+"æ™‚ã«ã¯å­˜åœ¨ã—ã¦ã„ãªãã¦ã‚‚ã‚ˆã„ã€‚override ã¯ä¿å­˜ã•ã‚Œã€å¾Œã§ç”¨ã„ã‚‰ã‚Œã‚‹ã€‚ãƒ¦ãƒ¼ã‚¶ã¨ã‚°"
+"ãƒ«ãƒ¼ãƒ—ã¯åå‰(ä¾‹ãˆã° B<root> ã¨ã‹ B<nobody> ã¨ã‹)ã§ã‚‚æŒ‡å®šã§ãã‚‹ã—ã€å‰ã« "
+"`B<#>' æ–‡å­—ã‚’ã¤ã‘ãŸæ•°å­—(ä¾‹ãˆã° B<#0> ã¨ã‹ B<#65534> ã¨ã‹)ã§ã‚‚æŒ‡å®šã§ãã‚‹ã€‚"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-statoverride.8:44
@@ -144,207 +139,196 @@ msgid ""
 "If --update is specified and B<E<lt>fileE<gt>> exists, it is immediately set "
 "to the new owner and mode."
 msgstr ""
+"--update ã‚’æŒ‡å®šã—ã€B<E<lt>fileE<gt>> ãŒå­˜åœ¨ã™ã‚‹å ´åˆã¯ã€ã™ãã«ãã®æ‰€æœ‰è€…ã¨ãƒ¢ãƒ¼"
+"ãƒ‰ã‚’æ–°ã—ã„å€¤ã«å¤‰æ›´ã™ã‚‹ã€‚"
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-statoverride.8:44
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--remove>I< E<lt>fileE<gt>>"
-msgstr "I<--remove E<lt>fileE<gt>>"
+msgstr "B<--remove>I< E<lt>fileE<gt>>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-statoverride.8:48
-#, fuzzy
 msgid ""
 "Remove an override for B<E<lt>fileE<gt>>, the status of B<E<lt>fileE<gt>> is "
 "left unchanged by this command."
-msgstr "B<E<lt>fileE<gt>> ¤Î override ¤òºï½ü¤¹¤ë¡£"
+msgstr ""
+"B<E<lt>fileE<gt>> ã® override ã‚’å‰Šé™¤ã™ã‚‹ã€‚B<E<lt>fileE<gt>> ã®çŠ¶æ…‹ã¯ã“ã®ã‚³ãƒ"
+"ãƒ³ãƒ‰ã§ã¯å¤‰åŒ–ã—ãªã„ã€‚"
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-statoverride.8:48
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--list> [I<E<lt>glob-patternE<gt>>]"
-msgstr "I<--list [E<lt>glob-patternE<gt>]>"
+msgstr "B<--list> [I<E<lt>glob-patternE<gt>>]"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-statoverride.8:53
-#, fuzzy
 msgid ""
 "List all overrides. If a glob pattern is specified restrict the output to "
 "overrides which match the glob. If there are no overrides or none match the "
 "glob B<dpkg-statoverride> will exit with an exitcode of 1."
 msgstr ""
-"override ¤ò¤¹¤Ù¤Æ¥ê¥¹¥È¤¹¤ë¡£ glob ¥Ñ¥¿¡¼¥ó¤¬»ØÄê¤µ¤ì¤¿¾ì¹ç¤Ï¡¢ ¥Ş¥Ã¥Á¤·¤¿ "
-"override ¤Î¤ß¤ò½ĞÎÏ¤¹¤ë¡£ override ¤¬Á´¤¯¤Ê¤¤¾ì¹ç¤ä¡¢glob ¤Ë¥Ş¥Ã¥Á¤¹¤ë¤â¤Î¤¬"
-"¤Ò¤È¤Ä¤â¤Ê¤«¤Ã¤¿¾ì¹ç¤Ï¡¢ B<dpkg-statoverride> ¤Ï½ªÎ»¥³¡¼¥É 1 ¤Ç½ªÎ»¤¹¤ë¡£"
+"override ã‚’ã™ã¹ã¦ãƒªã‚¹ãƒˆã™ã‚‹ã€‚glob ãƒ‘ã‚¿ãƒ¼ãƒ³ãŒæŒ‡å®šã•ã‚ŒãŸå ´åˆã¯ã€ãƒãƒƒãƒã—ãŸ "
+"override ã®ã¿ã‚’å‡ºåŠ›ã™ã‚‹ã€‚override ãŒå…¨ããªã„å ´åˆã‚„ã€glob ã«ãƒãƒƒãƒã™ã‚‹ã‚‚ã®ãŒã²"
+"ã¨ã¤ã‚‚ãªã‹ã£ãŸå ´åˆã¯ã€B<dpkg-statoverride> ã¯çµ‚äº†ã‚³ãƒ¼ãƒ‰ 1 ã§çµ‚äº†ã™ã‚‹ã€‚"
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-statoverride.8:53
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--force>"
-msgstr "I<--force>"
+msgstr "B<--force>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-statoverride.8:57
-#, fuzzy
 msgid ""
 "Force an action, even if a sanity check would otherwise prohibit it.  This "
 "is necessary to override an existing override."
 msgstr ""
-"sanity ¥Á¥§¥Ã¥¯ (Àµµ¤ÅÙ¥Á¥§¥Ã¥¯) ¤¬¶Ø»ß¤¹¤ë¤è¤¦¤Ê¾ì¹ç¤Ç¤â¡¢ Æ°ºî¤ò¶¯À©Åª¤Ë¹Ô"
-"¤¦¡£´ûÂ¸¤Î override ¤òÊÑ¹¹¤¹¤ë¾ì¹ç¤Ë¤Ï¡¢ ¤³¤ì¤ò»ØÄê¤¹¤ëÉ¬Í×¤¬¤¢¤ë¡£"
+"sanity ãƒã‚§ãƒƒã‚¯(æ­£æ°—åº¦ãƒã‚§ãƒƒã‚¯)ãŒç¦æ­¢ã™ã‚‹ã‚ˆã†ãªå ´åˆã§ã‚‚ã€å‹•ä½œã‚’å¼·åˆ¶çš„ã«è¡Œã†ã€‚"
+"æ—¢å­˜ã® override ã‚’å¤‰æ›´ã™ã‚‹å ´åˆã«ã¯ã€ã“ã‚Œã‚’æŒ‡å®šã™ã‚‹å¿…è¦ãŒã‚ã‚‹ã€‚"
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-statoverride.8:57
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--update>"
-msgstr "I<--update>"
+msgstr "B<--update>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-statoverride.8:61
-#, fuzzy
 msgid ""
 "Immediately try to change the file to the new owner and mode if it exists."
 msgstr ""
-"¥Õ¥¡¥¤¥ë¤¬Â¸ºß¤¹¤ë¾ì¹ç¤Ï¡¢¤¹¤°¤Ë¤½¤Î½êÍ­¼Ô¤È¥â¡¼¥É¤ò ¿·¤·¤¤ÃÍ¤ËÊÑ¹¹¤·¤è¤¦¤È¤¹"
-"¤ë¡£¤³¤ì¤Ï I<--add> ¤Î¾ì¹ç¤Ë¤Î¤ß¹Ô¤ï¤ì¤ë¡£"
+"ãƒ•ã‚¡ã‚¤ãƒ«ãŒå­˜åœ¨ã™ã‚‹å ´åˆã¯ã€ã™ãã«ãã®æ‰€æœ‰è€…ã¨ãƒ¢ãƒ¼ãƒ‰ã‚’æ–°ã—ã„å€¤ã«å¤‰æ›´ã—ã‚ˆã†ã¨ã™"
+"ã‚‹ã€‚"
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-statoverride.8:61
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--quiet>"
-msgstr "I<--quiet>"
+msgstr "B<--quiet>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-statoverride.8:64
-#, fuzzy
 msgid "Be less verbose about what we do."
-msgstr "Æ°ºî¤òÌµ¸ı¤Ë¹Ô¤¦¡£"
+msgstr "å‹•ä½œã‚’ç„¡å£ã«è¡Œã†ã€‚"
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-statoverride.8:64
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--help>"
-msgstr "I<--help>"
+msgstr "B<--help>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-statoverride.8:67
-#, fuzzy
 msgid "Show usage information."
-msgstr "¥Ğ¡¼¥¸¥ç¥ó¡¦Ãøºî¸¢¡¦ÍøÍÑÊıË¡¤Ë´Ø¤¹¤ë¾ğÊó¤òÉ½¼¨¤¹¤ë¡£"
+msgstr "åˆ©ç”¨æ–¹æ³•ã«é–¢ã™ã‚‹æƒ…å ±ã‚’è¡¨ç¤ºã™ã‚‹ã€‚"
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-statoverride.8:67
 #, no-wrap
 msgid "B<--version>"
-msgstr ""
+msgstr "B<--version>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-statoverride.8:70
 msgid "Show program version and copyright."
-msgstr ""
+msgstr "ãƒãƒ¼ã‚¸ãƒ§ãƒ³ã¨è‘—ä½œæ¨©ã«é–¢ã™ã‚‹æƒ…å ±ã‚’è¡¨ç¤ºã™ã‚‹ã€‚"
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-statoverride.8:70
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--admindir>"
-msgstr "I<--admindir>"
+msgstr "B<--admindir>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-statoverride.8:74
-#, fuzzy
 msgid ""
 "Change the directory of the dpkg database where the statoverride file is "
 "also stored. Defaults to I</var/lib/dpkg>."
 msgstr ""
-"dpkg ¥Ç¡¼¥¿¥Ù¡¼¥¹¤Î¥Ç¥£¥ì¥¯¥È¥ê¤òÊÑ¹¹¤¹¤ë¡£ statoverride ¤Î¥Õ¥¡¥¤¥ë¤â¤³¤³¤ËÊİ"
-"Â¸¤µ¤ì¤ë¡£ ¥Ç¥Õ¥©¥ë¥È¤Ï /var/lib/dpkg¡£"
+"dpkg ãƒ‡ãƒ¼ã‚¿ãƒ™ãƒ¼ã‚¹ã®ãƒ‡ã‚£ãƒ¬ã‚¯ãƒˆãƒªã‚’å¤‰æ›´ã™ã‚‹ã€‚statoverride ã®ãƒ•ã‚¡ã‚¤ãƒ«ã‚‚ã“ã“ã«ä¿"
+"å­˜ã•ã‚Œã‚‹ã€‚ãƒ‡ãƒ•ã‚©ãƒ«ãƒˆã¯ I</var/lib/dpkg>ã€‚"
 
 # type: SH
 #: ../../../man/po4a/../C/dpkg-statoverride.8:75
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "FILES"
-msgstr "¥Õ¥¡¥¤¥ë"
+msgstr "ãƒ•ã‚¡ã‚¤ãƒ«"
 
 # type: TP
 #: ../../../man/po4a/../C/dpkg-statoverride.8:76
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "I</var/lib/dpkg/statoverride>"
 msgstr "I</var/lib/dpkg/statoverride>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-statoverride.8:81
-#, fuzzy
 msgid ""
 "File which contains the current list of stat overrides of the system. It is "
 "located in the dpkg administration directory, along with other files "
 "important to dpkg, such as `status' or `available'."
 msgstr ""
-"¥·¥¹¥Æ¥à¤Î¸½ºß¤Î stat override ¤Î¥ê¥¹¥È¤¬½ñ¤«¤ì¤¿¥Õ¥¡¥¤¥ë¡£ dpkg ¤Î´ÉÍı¥Ç¥£¥ì"
-"¥¯¥È¥ê¤Ë¡¢dpkg ¤Ë¼è¤Ã¤Æ½ÅÍ×¤ÊÂ¾¤Î¥Õ¥¡¥¤¥ë (`status' ¤ä `available' ¤Ê¤É) ¤È"
-"¤¤¤Ã¤·¤ç¤ËÃÖ¤«¤ì¤ë¡£"
+"ã‚·ã‚¹ãƒ†ãƒ ã®ç¾åœ¨ã® stat override ã®ãƒªã‚¹ãƒˆãŒæ›¸ã‹ã‚ŒãŸãƒ•ã‚¡ã‚¤ãƒ«ã€‚dpkg ã®ç®¡ç†ãƒ‡ã‚£ãƒ¬"
+"ã‚¯ãƒˆãƒªã«ã€dpkg ã«å–ã£ã¦é‡è¦ãªä»–ã®ãƒ•ã‚¡ã‚¤ãƒ«(`status' ã‚„ `available' ãªã©)ã¨ã„ã£"
+"ã—ã‚‡ã«ç½®ã‹ã‚Œã‚‹ã€‚"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-statoverride.8:84
-#, fuzzy
 msgid ""
 "Note: dpkg-statoverride preserves the old copy of this file, with extension "
 "\"-old\", before replacing it with the new one."
 msgstr ""
-"Ãí°Õ: dpkg-statoverride ¤Ï¤³¤Î¥Õ¥¡¥¤¥ë¤ò¿·¤·¤¯½ñ¤­ÊÑ¤¨¤ëÁ°¤Ë¡¢ ¸Å¤¤¥³¥Ô¡¼¤ò "
-"\"-old\" ¤òÄÉ²Ã¤·¤¿Ì¾Á°¤ÇÊİÂ¸¤¹¤ë¡£"
+"æ³¨æ„: dpkg-statoverride ã¯ã“ã®ãƒ•ã‚¡ã‚¤ãƒ«ã‚’æ–°ã—ãæ›¸ãå¤‰ãˆã‚‹å‰ã«ã€å¤ã„ã‚³ãƒ”ãƒ¼ã‚’ "
+"\"-old\" ã‚’è¿½åŠ ã—ãŸåå‰ã§ä¿å­˜ã™ã‚‹ã€‚"
 
 # type: SH
 #: ../../../man/po4a/../C/dpkg-statoverride.8:85
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "SEE ALSO"
-msgstr "´ØÏ¢¹àÌÜ"
+msgstr "é–¢é€£é …ç›®"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-statoverride.8:87
-#, fuzzy
 msgid "B<dpkg>(1)."
-msgstr "B<dpkg>(8)"
+msgstr "B<dpkg>(1)."
 
 # type: SH
 #: ../../../man/po4a/../C/dpkg-statoverride.8:88
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "AUTHOR"
-msgstr "Ãø¼Ô"
+msgstr "è‘—è€…"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-statoverride.8:90
-#, fuzzy
 msgid "Copyright 2000 Wichert Akkerman"
 msgstr "Copyright 2000 Wichert Akkerman"
 
 # type: UR
 #: ../../../man/po4a/../C/dpkg-statoverride.8:90
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "mailto:wakkerma@debian.org"
 msgstr "mailto:wakkerma@debian.org"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-statoverride.8:92
-#, fuzzy
 msgid "E<lt>wakkerma@debian.orgE<gt>"
 msgstr "E<lt>wakkerma@debian.orgE<gt>"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-statoverride.8:95
-#, fuzzy
 msgid ""
 "This is free software; see the GNU General Public Licence version 2 or later "
 "for copying conditions. There is NO warranty."
 msgstr ""
 "This is free software; see the GNU General Public Licence version 2 or later "
-"for copying conditions.  There is NO warranty."
+"for copying conditions. There is NO warranty."
 
 # type: TH
-#, fuzzy
 #~ msgid "DPKG-STATOVERRIDE"
 #~ msgstr "DPKG-STATOVERRIDE"
 
 # type: TH
-#, fuzzy
 #~ msgid "November 2000"
 #~ msgstr "November 2000"
