--- a/man/po4a/dpkg-scanpackages.1/po/ja.po
+++ b/man/po4a/dpkg-scanpackages.1/po/ja.po
@@ -1,79 +1,77 @@
+# translation of dpkg-scanpackages.1.ja.po to Japanese
 # SOME DESCRIPTIVE TITLE
-# Copyright (C) YEAR Free Software Foundation, Inc.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
+# Copyright (C) 2006 Free Software Foundation, Inc.
+# KISE Hiroshi <kise@fuyuneko.jp>, 2006.
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "POT-Creation-Date: 2006-07-27 22:47+0200\n"
-"PO-Revision-Date: 2005-07-03 15:04+0200\n"
-"Last-Translator: Unknown translator\n"
+"PO-Revision-Date: 2006-08-04 19:51+0900\n"
+"Last-Translator: KISE Hiroshi <kise@fuyuneko.jp>\n"
 "Language-Team: Japanese <debian-l10n-japanese@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=EUC-JP\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 # type: TH
 #: ../../../man/po4a/../C/dpkg-scanpackages.1:16
 #, no-wrap
 msgid "dpkg-scanpackages"
-msgstr ""
+msgstr "dpkg-scanpackages"
 
 # type: TH
 #: ../../../man/po4a/../C/dpkg-scanpackages.1:16
 #, no-wrap
 msgid "2006-05-10"
-msgstr ""
+msgstr "2006-05-10"
 
 # type: TH
 #: ../../../man/po4a/../C/dpkg-scanpackages.1:16
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Debian Project"
-msgstr "Debian project"
+msgstr "Debian Project"
 
 # type: TH
 #: ../../../man/po4a/../C/dpkg-scanpackages.1:16
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "dpkg utilities"
 msgstr "dpkg utilities"
 
 # type: SH
 #: ../../../man/po4a/../C/dpkg-scanpackages.1:17
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "NAME"
-msgstr "Ì¾Á°"
+msgstr "åå‰"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-scanpackages.1:19
-#, fuzzy
 msgid "dpkg-scanpackages - create Packages files"
-msgstr "dpkg-scanpackages - Packages ¥Õ¥¡¥¤¥ë¤ÎºîÀ®"
+msgstr "dpkg-scanpackages - Packages ãƒ•ã‚¡ã‚¤ãƒ«ã®ä½œæˆ"
 
 # type: SH
 #: ../../../man/po4a/../C/dpkg-scanpackages.1:20
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "SYNOPSIS"
-msgstr "½ñ¼°"
+msgstr "æ›¸å¼"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-scanpackages.1:30
-#, fuzzy
 msgid ""
 "B<dpkg-scanpackages> [B<-u>] [B<-a> I<E<lt>archE<gt>> ] [B<-m>] I<binarydir> "
 "I<overridefile> [I<pathprefix>] B<E<gt>> I<Packages>"
 msgstr ""
-"B<dpkg-scanpackages> [I<-u>] [I<-aE<lt>archE<gt>>] I<binarydir> "
+"B<dpkg-scanpackages> [B<-u>] [B<-a> I<E<lt>archE<gt>> ] [B<-m>] I<binarydir> "
 "I<overridefile> [I<pathprefix>] B<E<gt>> I<Packages>"
 
 # type: SH
 #: ../../../man/po4a/../C/dpkg-scanpackages.1:31
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "DESCRIPTION"
-msgstr "ÀâÌÀ"
+msgstr "èª¬æ˜"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-scanpackages.1:43
-#, fuzzy
 msgid ""
 "B<dpkg-scanpackages> sorts through a tree of Debian binary packages and "
 "creates a Packages file, used by B<apt>(8), B<dselect>(1), etc, to tell the "
@@ -82,12 +80,12 @@ msgid ""
 "B<dpkg-scanpackages> yourself if making a directory of local packages to "
 "install on a cluster of machines."
 msgstr ""
-"B<dpkg-scanpackages> ¤Ï Debian ¥Ğ¥¤¥Ê¥ê¥Ñ¥Ã¥±¡¼¥¸¤Î¥Ä¥ê¡¼¤ò¸«¤Æ Packages ¥Õ¥¡"
-"¥¤¥ë¤òÀ¸À®¤¹¤ë¡£ Packages ¥Õ¥¡¥¤¥ë¤Ï B<dselect>(8)  ¤Ê¤É¤Ë¡¢¤É¤Î¥Ñ¥Ã¥±¡¼¥¸¤¬"
-"¥¤¥ó¥¹¥È¡¼¥ë¤Ç¤­¤ë¤«¤ò¥æ¡¼¥¶¤ËÃÎ¤é¤»¤ë¤¿¤á¤ËÍøÍÑ¤·¤Æ¤¤¤ë¡£ ¤³¤ì¤é¤Î Packages "
-"¥Õ¥¡¥¤¥ë¤Ï Debian ¥¢¡¼¥«¥¤¥Ö¥µ¥¤¥È¤ä CD-ROM ¤Ê¤É¤Ç»È¤ï¤ì¤Æ¤¤¤ë ¤â¤Î¤ÈÆ±¤¸¤â¤Î"
-"¤Ç¤¢¤ë¡£ ¤â¤·¡¢¤¿¤¯¤µ¤ó¤Î¥Ş¥·¥ó¤Ë¥¤¥ó¥¹¥È¡¼¥ë¤·¤¿¤¤¥í¡¼¥«¥ë¤Ê¥Ñ¥Ã¥±¡¼¥¸¤Î "
-"¥Ç¥£¥ì¥¯¥È¥ê¤òºî¤ë¤Ê¤é¡¢¼«Ê¬¤Ç B<dpkg-scanpackages> ¤ò»È¤¦¤³¤È¤¬¤Ç¤­¤ë¡£"
+"B<dpkg-scanpackages> ã¯ Debian ãƒã‚¤ãƒŠãƒªãƒ‘ãƒƒã‚±ãƒ¼ã‚¸ã®ãƒ„ãƒªãƒ¼ã‚’è¦‹ã¦ Packages ãƒ•ã‚¡"
+"ã‚¤ãƒ«ã‚’ç”Ÿæˆã™ã‚‹ã€‚Packages ãƒ•ã‚¡ã‚¤ãƒ«ã¯ B<apt>(8) ã‚„ B<dselect>(1) ãªã©ã«ã€ã©ã®ãƒ‘ãƒƒã‚±ãƒ¼ã‚¸ãŒ"
+"ã‚¤ãƒ³ã‚¹ãƒˆãƒ¼ãƒ«ã§ãã‚‹ã‹ã‚’ãƒ¦ãƒ¼ã‚¶ã«çŸ¥ã‚‰ã›ã‚‹ãŸã‚ã«åˆ©ç”¨ã—ã¦ã„ã‚‹ã€‚ã“ã‚Œã‚‰ã® Packages "
+"ãƒ•ã‚¡ã‚¤ãƒ«ã¯ Debian ã‚¢ãƒ¼ã‚«ã‚¤ãƒ–ã‚µã‚¤ãƒˆã‚„ CD-ROM ãªã©ã§ä½¿ã‚ã‚Œã¦ã„ã‚‹ã‚‚ã®ã¨åŒã˜ã‚‚ã®"
+"ã§ã‚ã‚‹ã€‚ã‚‚ã—ã€ãŸãã•ã‚“ã®ãƒã‚·ãƒ³ã«ã‚¤ãƒ³ã‚¹ãƒˆãƒ¼ãƒ«ã—ãŸã„ãƒ­ãƒ¼ã‚«ãƒ«ãªãƒ‘ãƒƒã‚±ãƒ¼ã‚¸ã®"
+"ãƒ‡ã‚£ãƒ¬ã‚¯ãƒˆãƒªã‚’ä½œã‚‹ãªã‚‰ã€è‡ªåˆ†ã§ B<dpkg-scanpackages> ã‚’ä½¿ã†ã“ã¨ãŒã§ãã‚‹ã€‚"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-scanpackages.1:53
@@ -97,55 +95,53 @@ msgid ""
 "Packages.gz file). apt ignores uncompressed Packages files except on local "
 "access (i.e.  B<file://> sources)."
 msgstr ""
+"B<æ³¨æ„:> B<apt> ã§ä½¿ã†ã®ã§ã‚ã‚Œã°ã€ç”Ÿæˆã—ãŸ Packages ãƒ•ã‚¡ã‚¤ãƒ«ã‚’ B<gzip>(1) "
+"ã§åœ§ç¸®ã™ã‚‹(Packages.gz ã‚’ç”Ÿæˆã™ã‚‹)å¿…è¦ãŒã‚ã‚‹ã ã‚ã†ã€‚apt ã¯ãƒ­ãƒ¼ã‚«ãƒ«ã‚¢ã‚¯ã‚»ã‚¹"
+"(ã¤ã¾ã‚Š B<file://> ã‚½ãƒ¼ã‚¹)ä»¥å¤–ã§ã®éåœ§ç¸®ã® Packages ãƒ•ã‚¡ã‚¤ãƒ«ã‚’ç„¡è¦–ã™ã‚‹ã€‚"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-scanpackages.1:60
-#, fuzzy
 msgid ""
 "I<binarydir> is the name of the tree of the binary packages to process (for "
 "example, B<contrib/binary-i386>).  It is best to make this relative to the "
 "root of the Debian archive, because every Filename field in the new Packages "
 "file will start with this string."
 msgstr ""
-"I<binarydir> ¤Ï½èÍı¤¹¤ë¥Ğ¥¤¥Ê¥ê¥Ä¥ê¡¼¤ÎÌ¾Á°¤Ç¤¢¤ë(Îã¤¨¤Ğ B<contrib/binary-"
-"i386> ¤Ê¤É)¡£ Debian ¥¢¡¼¥«¥¤¥Ö¤Î¥ë¡¼¥È¤«¤é¤ÎÁêÂĞ¤Ë¤·¤Æ¤ª¤¯¤Î¤¬ºÇ¤â¤¤¤¤ÊıË¡¤Ç"
-"¤¢¤ë¡£ ¤Ê¤¼¤Ê¤é Packages ¥Õ¥¡¥¤¥ë¤Ë´Ş¤Ş¤ì¤Æ¤¤¤ë³Æ¡¹¤Î Filename ¥Õ¥£¡¼¥ë¥É¤Ï "
-"¤³¤ÎÊ¸»úÎó¤Ç»Ï¤Ş¤ë¤«¤é¤Ç¤¢¤ë¡£"
+"I<binarydir> ã¯å‡¦ç†ã™ã‚‹ãƒã‚¤ãƒŠãƒªãƒ‘ãƒƒã‚±ãƒ¼ã‚¸ã®ãƒ„ãƒªãƒ¼ã®åå‰ã§ã‚ã‚‹(ä¾‹ãˆã° B<contrib/binary-"
+"i386> ãªã©)ã€‚Debian ã‚¢ãƒ¼ã‚«ã‚¤ãƒ–ã®ãƒ«ãƒ¼ãƒˆã‹ã‚‰ã®ç›¸å¯¾ã«ã—ã¦ãŠãã®ãŒæœ€ã‚‚ã„ã„æ–¹æ³•ã§"
+"ã‚ã‚‹ã€‚ãªãœãªã‚‰ Packages ãƒ•ã‚¡ã‚¤ãƒ«ã«å«ã¾ã‚Œã¦ã„ã‚‹å„ã€…ã® Filename ãƒ•ã‚£ãƒ¼ãƒ«ãƒ‰ã¯"
+"ã“ã®æ–‡å­—åˆ—ã§å§‹ã¾ã‚‹ã‹ã‚‰ã§ã‚ã‚‹ã€‚"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-scanpackages.1:64
-#, fuzzy
 msgid ""
 "I<overridefile> is the name of a file to read which contains information "
 "about how the package fits into the distribution; see below."
 msgstr ""
-"I<overridefile> ¤Ï¥Ñ¥Ã¥±¡¼¥¸¤¬¥Ç¥£¥¹¥È¥ê¥Ó¥å¡¼¥·¥ç¥ó¤Ë¤¢¤¦¤è¤¦¤Ë¤¹¤ë¤¿¤á¤Î¾ğ"
-"Êó¤ò ´Ş¤ó¤Ç¤¤¤ë¥Õ¥¡¥¤¥ë¤ÎÌ¾Á°¤Ç¤¢¤ë¡£°Ê²¼¤ò»²¾È¤Î¤³¤È¡£"
+"I<overridefile> ã¯ãƒ‘ãƒƒã‚±ãƒ¼ã‚¸ãŒãƒ‡ã‚£ã‚¹ãƒˆãƒªãƒ“ãƒ¥ãƒ¼ã‚·ãƒ§ãƒ³ã«åˆã†ã‚ˆã†ã«ã™ã‚‹ãŸã‚ã®æƒ…"
+"å ±ã‚’å«ã‚“ã§ã„ã‚‹ãƒ•ã‚¡ã‚¤ãƒ«ã®åå‰ã§ã‚ã‚‹ã€‚ä»¥ä¸‹ã‚’å‚ç…§ã®ã“ã¨ã€‚"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-scanpackages.1:67
-#, fuzzy
 msgid ""
 "I<pathprefix> is an optional string to be prepended to the Filename fields."
 msgstr ""
-"I<pathprefix> ¤Ï Filename ¥Õ¥£¡¼¥ë¥É¤ÇÁ°¤ËÄÉ²Ã¤Ç¤­¤ë¥ª¥×¥·¥ç¥ó¤ÎÊ¸»úÎó¤Ç¤¢"
-"¤ë¡£"
+"I<pathprefix> ã¯ Filename ãƒ•ã‚£ãƒ¼ãƒ«ãƒ‰ã§å‰ã«è¿½åŠ ã§ãã‚‹ã‚ªãƒ—ã‚·ãƒ§ãƒ³ã®æ–‡å­—åˆ—ã§ã‚"
+"ã‚‹ã€‚"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-scanpackages.1:71
-#, fuzzy
 msgid "If B<-u> is specified, then scan for *.udeb, instead of *.deb."
-msgstr "I<-u> ¤ò»ØÄê¤·¤¿¾ì¹ç¤Ï¡¢*.deb ¤ÎÂå¤ï¤ê¤Ë *.udeb ¤ò¥¹¥­¥ã¥ó¤¹¤ë¡£"
+msgstr "B<-u> ã‚’æŒ‡å®šã—ãŸå ´åˆã¯ã€*.deb ã®ä»£ã‚ã‚Šã« *.udeb ã‚’ã‚¹ã‚­ãƒ£ãƒ³ã™ã‚‹ã€‚"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-scanpackages.1:74
-#, fuzzy
 msgid ""
 "When B<-a>I<E<lt>archE<gt>> is specified, then instead of scanning for all "
 "debs, a pattern consisting of *_all.deb and *_arch.deb is used."
 msgstr ""
-"-aI<E<lt>archE<gt>> ¤ò»ØÄê¤·¤¿¾ì¹ç¤Ï¡¢¤¹¤Ù¤Æ¤Î deb ¥Õ¥¡¥¤¥ë¤ò¥¹¥­¥ã¥ó¤¹¤ëÂå¤ï"
-"¤ê¤Ë¡¢ *_all.deb ¤ä *_arch.deb ¥Ñ¥¿¡¼¥ó¤Ë¥Ş¥Ã¥Á¤¹¤ë¥Õ¥¡¥¤¥ë¤òÂĞ¾İ¤È¤¹¤ë¡£"
+"B<-a>I<E<lt>archE<gt>> ã‚’æŒ‡å®šã—ãŸå ´åˆã¯ã€ã™ã¹ã¦ã® deb ãƒ•ã‚¡ã‚¤ãƒ«ã‚’ã‚¹ã‚­ãƒ£ãƒ³ã™ã‚‹ä»£ã‚"
+"ã‚Šã«ã€*_all.deb ã‚„ *_arch.deb ãƒ‘ã‚¿ãƒ¼ãƒ³ã«ãƒãƒƒãƒã™ã‚‹ãƒ•ã‚¡ã‚¤ãƒ«ã‚’å¯¾è±¡ã¨ã™ã‚‹ã€‚"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-scanpackages.1:80
@@ -156,16 +152,19 @@ msgid ""
 "behaviour with the B<-m> switch. If given, all found packages are included "
 "in the output."
 msgstr ""
+"2 ã¤ä»¥ä¸Šã®ãƒãƒ¼ã‚¸ãƒ§ãƒ³ã®ãƒ‘ãƒƒã‚±ãƒ¼ã‚¸ãŒã‚ã‚Œã°ã€æœ€æ–°ã® 1 ã¤ã ã‘ãŒå‡ºåŠ›ã«å«ã¾ã‚Œã‚‹ã€‚"
+"åŒä¸€ã®ãƒãƒ¼ã‚¸ãƒ§ãƒ³ã§ã‚¢ãƒ¼ã‚­ãƒ†ã‚¯ãƒãƒ£ã ã‘ãŒç•°ãªã‚‹å ´åˆã¯ã€æœ€åˆã® 1 ã¤ã ã‘ãŒä½¿ç”¨ã•ã‚Œã‚‹ã€‚"
+"ã“ã®å‹•ãã¯ B<-m> ã‚¹ã‚¤ãƒƒãƒã§å¤‰æ›´ã§ãã‚‹ã€‚"
+"ã“ã®ã‚¹ã‚¤ãƒƒãƒãŒæŒ‡å®šã•ã‚ŒãŸå ´åˆã¯ã€ã¿ã¤ã‹ã£ãŸãƒ‘ãƒƒã‚±ãƒ¼ã‚¸ã™ã¹ã¦ãŒå‡ºåŠ›ã«å«ã¾ã‚Œã‚‹ã€‚"
 
 # type: SH
 #: ../../../man/po4a/../C/dpkg-scanpackages.1:81
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "THE OVERRIDE FILE"
-msgstr "OVERRIDE ¥Õ¥¡¥¤¥ë"
+msgstr "OVERRIDE ãƒ•ã‚¡ã‚¤ãƒ«"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-scanpackages.1:87
-#, fuzzy
 msgid ""
 "While most information about a package can be found in the control file, "
 "some must be filled in by the distribution czars rather than by the "
@@ -173,109 +172,99 @@ msgid ""
 "rather than the actual dependencies and description of the package.  This "
 "information is found in the override file."
 msgstr ""
-"¥Ñ¥Ã¥±¡¼¥¸¤Ë´Ø¤¹¤ë¤Û¤È¤ó¤É¤Î¾ğÊó¤Ï control ¥Õ¥¡¥¤¥ë¤Ç¸«¤Ä¤±¤ë¤³¤È¤¬¤Ç¤­¤ë"
-"¤¬¡¢ ¤¤¤¯¤Ä¤«¤Ï¥á¥ó¥Æ¥Ê¤Ç¤Ï¤Ê¤¯¥Ç¥£¥¹¥È¥ê¥Ó¥å¡¼¥·¥ç¥óºîÀ®¼Ô¤Ë¤è¤ê¡¢¤½¤ì¤é¤Î¾ğ"
-"Êó¤ò Í¿¤¨¤ëÉ¬Í×¤¬¤¢¤ë¡£¥Ñ¥Ã¥±¡¼¥¸¤Î¼Âºİ¤Î°ÍÂ¸´Ø·¸¤äÀâÌÀ¤è¤ê¤â¡¢¥ê¥ê¡¼¥¹¤Ë ¤à"
-"¤±¤Æ¥Õ¥¡¥¤¥ë¤ò¤É¤¦ÇÛÃÖ¤¹¤ë¤«¤Ë´Ø·¸¤·¤Æ¤¯¤ë¤«¤é¤Ç¤¢¤ë¡£ ¤³¤ì¤é¤Î¾ğÊó¤Ï "
-"override ¥Õ¥¡¥¤¥ë¤Ë¤¢¤ë¡£"
+"ãƒ‘ãƒƒã‚±ãƒ¼ã‚¸ã«é–¢ã™ã‚‹ã»ã¨ã‚“ã©ã®æƒ…å ±ã¯ control ãƒ•ã‚¡ã‚¤ãƒ«ã§è¦‹ã¤ã‘ã‚‹ã“ã¨ãŒã§ãã‚‹"
+"ãŒã€ã„ãã¤ã‹ã¯ãƒ¡ãƒ³ãƒ†ãƒŠã§ã¯ãªããƒ‡ã‚£ã‚¹ãƒˆãƒªãƒ“ãƒ¥ãƒ¼ã‚·ãƒ§ãƒ³ä½œæˆè€…ã«ã‚ˆã‚Šã€ãã‚Œã‚‰ã®æƒ…"
+"å ±ã‚’ä¸ãˆã‚‹å¿…è¦ãŒã‚ã‚‹ã€‚ãƒ‘ãƒƒã‚±ãƒ¼ã‚¸ã®å®Ÿéš›ã®ä¾å­˜é–¢ä¿‚ã‚„èª¬æ˜ã‚ˆã‚Šã‚‚ã€ãƒªãƒªãƒ¼ã‚¹ã«ã‚€"
+"ã‘ã¦ãƒ•ã‚¡ã‚¤ãƒ«ã‚’ã©ã†é…ç½®ã™ã‚‹ã‹ã«é–¢ä¿‚ã—ã¦ãã‚‹ã‹ã‚‰ã§ã‚ã‚‹ã€‚ã“ã‚Œã‚‰ã®æƒ…å ±ã¯ "
+"override ãƒ•ã‚¡ã‚¤ãƒ«ã«ã‚ã‚‹ã€‚"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-scanpackages.1:91
-#, fuzzy
 msgid ""
 "The override file has a simple whitespace-delimited format. Comments are "
 "allowed (denoted with a B<#>)."
 msgstr ""
-"override ¥Õ¥¡¥¤¥ë¤Ï´ÊÃ±¤Ê¶õÇò¤Ç¶èÀÚ¤é¤ì¤¿·Á¼°¤Ë¤Ê¤Ã¤Æ¤¤¤ë¡£¥³¥á¥ó¥È¤â µö¤µ¤ì"
-"¤Æ¤¤¤ë( B<#> °Ê¹ß¤¬¥³¥á¥ó¥È )¡£"
+"override ãƒ•ã‚¡ã‚¤ãƒ«ã¯ç°¡å˜ãªç©ºç™½ã§åŒºåˆ‡ã‚‰ã‚ŒãŸå½¢å¼ã«ãªã£ã¦ã„ã‚‹ã€‚ã‚³ãƒ¡ãƒ³ãƒˆã‚‚è¨±ã•ã‚Œ"
+"ã¦ã„ã‚‹(B<#> ä»¥é™ãŒã‚³ãƒ¡ãƒ³ãƒˆ)ã€‚"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-scanpackages.1:97
-#, fuzzy
 msgid "I<package> I<priority> I<section> [I<maintainerinfo>]"
 msgstr "I<package> I<priority> I<section> [I<maintainerinfo>]"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-scanpackages.1:102
-#, fuzzy
 msgid ""
 "I<package> is the name of the package. Entries in the override file for "
 "packages not found in the tree of binary packages are ignored."
 msgstr ""
-"I<package> ¤Ï¥Ñ¥Ã¥±¡¼¥¸Ì¾¤Ç¤¢¤ë¡£override ¥Õ¥¡¥¤¥ë¤Ë¤¢¤ë¤¬¥Ğ¥¤¥Ê¥ê¥Ä¥ê¡¼¤Ë¤Ï "
-"¤Ê¤¤¥Ñ¥Ã¥±¡¼¥¸Ì¾¤Î¥¨¥ó¥È¥ê¤ÏÌµ»ë¤µ¤ì¤ë¡£"
+"I<package> ã¯ãƒ‘ãƒƒã‚±ãƒ¼ã‚¸åã§ã‚ã‚‹ã€‚override ãƒ•ã‚¡ã‚¤ãƒ«ã«ã‚ã‚‹ãŒãƒã‚¤ãƒŠãƒªãƒ‘ãƒƒã‚±ãƒ¼ã‚¸ã®ãƒ„ãƒªãƒ¼ã«ã¯"
+"ãªã„ãƒ‘ãƒƒã‚±ãƒ¼ã‚¸åã®ã‚¨ãƒ³ãƒˆãƒªã¯ç„¡è¦–ã•ã‚Œã‚‹ã€‚"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-scanpackages.1:111
-#, fuzzy
 msgid ""
 "I<priority> and I<section> place the package within the release tree; these "
 "ought not to be found in the control file. If the package is found in a "
 "subdirectory of I<binarydir>, that will be checked against I<section>."
 msgstr ""
-"I<priority> ¤È I<section> ¤Ï¥Ñ¥Ã¥±¡¼¥¸¤ò¥ê¥ê¡¼¥¹¥Ä¥ê¡¼¤Ç¤É¤³¤ËÃÖ¤¯¤«¤ò»ØÄê¤¹"
-"¤ë¡£¤³¤ì¤é¤Ï control ¥Õ¥¡¥¤¥ë¤Ë¤¢¤ë¤Ù¤­¤Ç¤Ï¤Ê¤¤¡£¤â¤·¥Ñ¥Ã¥±¡¼¥¸¤¬ "
-"I<binarydir> ¤Î¥µ¥Ö¥Ç¥£¥ì¥¯¥È¥ê¤Ë¤¢¤ì¤Ğ I<section> ¤ÎÃÍ¤È¥Á¥§¥Ã¥¯¤µ¤ì¤ë¡£"
+"I<priority> ã¨ I<section> ã¯ãƒ‘ãƒƒã‚±ãƒ¼ã‚¸ã‚’ãƒªãƒªãƒ¼ã‚¹ãƒ„ãƒªãƒ¼ã§ã©ã“ã«ç½®ãã‹ã‚’æŒ‡å®šã™"
+"ã‚‹ã€‚ã“ã‚Œã‚‰ã¯ control ãƒ•ã‚¡ã‚¤ãƒ«ã«ã‚ã‚‹ã¹ãã§ã¯ãªã„ã€‚ã‚‚ã—ãƒ‘ãƒƒã‚±ãƒ¼ã‚¸ãŒ "
+"I<binarydir> ã®ã‚µãƒ–ãƒ‡ã‚£ãƒ¬ã‚¯ãƒˆãƒªã«ã‚ã‚Œã° I<section> ã®å€¤ã¨ãƒã‚§ãƒƒã‚¯ã•ã‚Œã‚‹ã€‚"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-scanpackages.1:119
-#, fuzzy
 msgid ""
 "I<maintainerinfo>, if present, can be either the name of a maintainer for an "
 "unconditional override, or else I<oldmaintainer> B<=E<gt>> I<newmaintainer> "
 "to perform a substitution."
 msgstr ""
-"I<maintainerinfo>, ¤¬¤â¤·¤¢¤ì¤Ğ¥á¥ó¥Æ¥Ê¤ÎÌ¾Á°¤òÌµ¾ò·ï¤Ë¾å½ñ¤­¤Ç¤­¤ë¡£¤â¤·¤¯"
-"¤Ï I<oldmaintainer> B<=E<gt>> I<newmaintainer> ¤Î¾ì¹ç¤ÏÃÖ´¹¤µ¤ì¤ë¡£"
+"I<maintainerinfo> ãŒã‚‚ã—ã‚ã‚Œã°ãƒ¡ãƒ³ãƒ†ãƒŠã®åå‰ã‚’ç„¡æ¡ä»¶ã«ä¸Šæ›¸ãã§ãã‚‹ã€‚ã‚‚ã—ã"
+"ã¯ I<oldmaintainer> B<=E<gt>> I<newmaintainer> ã®å ´åˆã¯ç½®æ›ã•ã‚Œã‚‹ã€‚"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-scanpackages.1:124
-#, fuzzy
 msgid ""
 "The override files used to make the official Packages lists may be found in "
 "the I<indices> directory on any Debian mirror."
 msgstr ""
-"¸ø¼°¤Î Packages ¥ê¥¹¥È¤òºîÀ®¤¹¤ë¤¿¤á¤Ë»È¤ï¤ì¤Æ¤¤¤ë override ¥Õ¥¡¥¤¥ë¤Ï¡¢ "
-"Debian ¥ß¥é¡¼¤Î I<indices> ¥Ç¥£¥ì¥¯¥È¥ê¤Ë¤¢¤ë¡£"
+"å…¬å¼ã® Packages ãƒªã‚¹ãƒˆã‚’ä½œæˆã™ã‚‹ãŸã‚ã«ä½¿ã‚ã‚Œã¦ã„ã‚‹ override ãƒ•ã‚¡ã‚¤ãƒ«ã¯ã€ "
+"Debian ãƒŸãƒ©ãƒ¼ã® I<indices> ãƒ‡ã‚£ãƒ¬ã‚¯ãƒˆãƒªã«ã‚ã‚‹ã€‚"
 
 # type: SH
 #: ../../../man/po4a/../C/dpkg-scanpackages.1:125
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "DIAGNOSTICS"
-msgstr "¿ÇÃÇ"
+msgstr "è¨ºæ–­"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-scanpackages.1:131
-#, fuzzy
 msgid ""
 "B<dpkg-scanpackages> outputs the usual self-explanatory errors. It also "
 "warns about packages that are in the wrong subdirectory, are duplicated, "
 "have a Filename field in their control file, are missing from the override "
 "file, or have maintainer substitutions which do not take effect."
 msgstr ""
-"B<dpkg-scanpackages> ¤ÏÄÌ¾ï¤Î¼«¸ÊÀâÌÀÅª¤Ê¥¨¥é¡¼¤ò½ĞÎÏ¤¹¤ë¡£¥Ñ¥Ã¥±¡¼¥¸¤¬´Ö°ã¤Ã"
-"¤¿¥Ç¥£¥ì¥¯¥È¥ê¤Ë ¤¢¤ë¡¢Ê£¿ô¤¢¤ë¡¢control ¥Õ¥¡¥¤¥ë¤Ë Filename ¥Õ¥£¡¼¥ë¥É¤¬¤¢"
-"¤ë¡¢override ¥Õ¥¡¥¤¥ë¤Ë¤Ê¤¤¡¢¼Â¹Ô¤µ¤ì¤Ê¤«¤Ã¤¿¥á¥ó¥Æ¥Ê¤ÎÃÖ´¹¤¬¤¢¤ë¤Ê¤É¤È¤¤¤Ã¤¿"
-"·Ù¹ğ¤â ¤¹¤ë¡£"
+"B<dpkg-scanpackages> ã¯é€šå¸¸ã®è‡ªå·±èª¬æ˜çš„ãªã‚¨ãƒ©ãƒ¼ã‚’å‡ºåŠ›ã™ã‚‹ã€‚ãƒ‘ãƒƒã‚±ãƒ¼ã‚¸ãŒé–“é•ã£"
+"ãŸãƒ‡ã‚£ãƒ¬ã‚¯ãƒˆãƒªã«ã‚ã‚‹ã€è¤‡æ•°ã‚ã‚‹ã€control ãƒ•ã‚¡ã‚¤ãƒ«ã« Filename ãƒ•ã‚£ãƒ¼ãƒ«ãƒ‰ãŒã‚"
+"ã‚‹ã€override ãƒ•ã‚¡ã‚¤ãƒ«ã«ãªã„ã€å®Ÿè¡Œã•ã‚Œãªã‹ã£ãŸãƒ¡ãƒ³ãƒ†ãƒŠã®ç½®æ›ãŒã‚ã‚‹ãªã©ã¨ã„ã£ãŸ"
+"è­¦å‘Šã‚‚ã™ã‚‹ã€‚"
 
 # type: SH
 #: ../../../man/po4a/../C/dpkg-scanpackages.1:132
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "SEE ALSO"
-msgstr "´ØÏ¢¹àÌÜ"
+msgstr "é–¢é€£é …ç›®"
 
 # type: Plain text
 #: ../../../man/po4a/../C/dpkg-scanpackages.1:135
-#, fuzzy
 msgid "B<dpkg>(1), B<dselect>(1), B<dpkg-scansources>(1)."
-msgstr "B<dpkg>(8), B<dselect>(8), B<dpkg-scansources>(1)."
+msgstr "B<dpkg>(1), B<dselect>(1), B<dpkg-scansources>(1)."
 
 # type: TH
-#, fuzzy
 #~ msgid "DPKG-SCANPACKAGES"
 #~ msgstr "DPKG-SCANPACKAGES"
 
 # type: TH
-#, fuzzy
 #~ msgid "1996-07-08"
 #~ msgstr "1996-07-08"
